# cli_adventure_sheet

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/app/: character.rs  character.rs_notes_fix.txt  equipment.rs  feats.rs  inventory.rs  levelup.rs  mod.rs  multiclass.rs  spells.rs
src/client/: admin.rs  auth.rs  character.rs  compendium.rs  mod.rs
src/handlers/: auth.rs  builder.rs  character_list.rs  edit.rs  mod.rs
src/handlers/sheet/: actions.rs  common.rs  core_stats.rs  features.rs  inventory.rs  mod.rs  notes.rs  picker.rs  skills.rs  spells.rs
src/models/: actions.rs  app_state.rs  auth.rs  character.rs  compendium.rs  error.rs  mod.rs
src/models/features/: feature.rs  interpreter.rs  mod.rs
src/ui/: char_list.rs  edit_character.rs  login.rs  mod.rs
src/ui/builder/: mod.rs  step_abilities.rs  step_background.rs  step_background_feat.rs  step_bg_abilities.rs  step_class.rs  step_details.rs  step_equipment.rs  step_feat_skill.rs  step_languages.rs  step_proficiencies.rs  step_race.rs  step_race_feat.rs  step_race_skill.rs  step_spells.rs  step_subclass.rs  step_summary.rs  step_weapon_mastery.rs
src/ui/sheet/: actions.rs  background_info.rs  core_stats.rs  features.rs  inventory.rs  mod.rs  notes.rs  proficiency.rs  skills.rs  spells.rs
src/utils/: mod.rs  storage.rs  weapon_mastery.rs
