[package]
name = "cli_adventure_sheet"
version = "0.5.1"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
crossterm = "0.29"
directories = "6.0.0"
